# GP-Website

./: README.md
Ai_Services/: .env
Ai_Services/crewai_project/summary_output/: .env  .gitignore  pyproject.toml
Ai_Services/crewai_project/summary_output/src/summary_output/: api.py  main.py
Ai_Services/crewai_project/summary_output/src/summary_output/crews/models_crew/: models_crew.py
Ai_Services/crewai_project/summary_output/src/summary_output/crews/models_crew/config/: agents.yaml  tasks.yaml
Ai_Services/crewai_project/summary_output/src/summary_output/crews/req_crew/: req_crew.py
Ai_Services/crewai_project/summary_output/src/summary_output/crews/req_crew/config/: agents.yaml  tasks.yaml
Ai_Services/crewai_project/summary_output/src/summary_output/crews/srs_crew/: srs_crew.py
Ai_Services/crewai_project/summary_output/src/summary_output/crews/srs_crew/config/: agents.yaml  tasks.yaml
Ai_Services/crewai_project/summary_output/src/summary_output/crews/ui_req/: ui_req.py
Ai_Services/crewai_project/summary_output/src/summary_output/crews/ui_req/config/: agents.yaml  tasks.yaml
Ai_Services/crewai_project/summary_output/src/summary_output/outputs/: extracted_requirements.md  srs_document.md  ui_specifications.md  uml_diagram.md
Ai_Services/summary_output/: .gitignore  README.md
backend/: .env  .gitignore  Project Structure.txt  package-lock.json  package.json  server.js  speachToText.js
backend/controllers/: arabicMinutes.controller.js  arabicSummary.controller.js  crewai.controller.js  (+7 more)
frontend/: package-lock.json  package.json  vite.config.js
(+69 files in other folders)
