[project]
name = "meeting_output"
version = "0.1.0"
description = "meeting_output using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "meeting_output.main:kickoff"
plot = "meeting_output.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
